--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,17 +48,17 @@ jobs:
             targets: AppImage
             filename: mrzbcli-linux-x64
 
-         # - platform: macos
-          #  os: macos-13
-          # aarch: universal
-          # targets: dmg
-          # filename: mrzbcli-macos-universal
+          - platform: ios
+            os: macos-13
+           aarch: universal
+           targets: dmg
+           filename: mrzbcli-macos-universal
 
-           - platform: ios
-             os: macos-13
-             aarch: universal
-             filename: mrzbcli-ios
-             targets: ipa
+          # - platform: ios
+          #   os: macos-13
+          #   aarch: universal
+          #   filename: mrzbcli-ios
+          #   targets: ipa
 
     runs-on: ${{ matrix.os }}
     steps:
